2006-05-08  Lillian Angel  <langel@redhat.com>

	* java/net/URLClassLoader.java
	(JarURLLoader): Added check to make sure the INDEX.LIST file
	exists.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27481
	* javax/swing/JRootPane.java
	(createContentPane): Set background of the content pane to null,
	so that the content pane inherits its background from the
	root pane.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27480
	* javax/swing/ButtonGroup.java
	(add): Check if new button is selected and if so, deselect other
	buttons in the group.

2006-05-08  Lillian Angel  <langel@redhat.com>

	PR 27444
	* java/net/URLClassLoader.java
	(JarURLLoader): Added code to go through 
	META-INF/INDEX.LIST file to load all jars listed.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27461
	* javax/swing/ImageIcon.java
	(ImageIcon(URL)): Set description to URL.toString().

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27482
	* javax/swing/JTable.java
	(IconCellRenderer.getTableCellRendererComponent): Set icon to
	null when cell value is null.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27484
	* javax/swing/DefaultDesktopManager.java
	(closeFrame): Don't perform default close action on the frame
	to prevent endless loop.

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27485
	* javax/swing/table/DefaultTableModel.java
	(addExtraRows): New helper method.
	(checkSize): New helper method.
	(setRowCount): Use addExtraRows helper method.
	(addColumn): Use addExtraRows helper method.
	(getColumnName): Check and adjust size if necessary using
	checkSize().

2006-05-08  Roman Kennke <kennke@aicas.com>

	PR classpath/27486
	* javax/swing/JTable.java
	(setValueAt): Allow setting values even when table is editable.

2006-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/27435:
	* java/util/zip/DeflaterEngine.java:
	(deflateFast(boolean,boolean)): Empty buffer when full.
	